dhall/tests/type-inference/failure/unit/RecordProjectionNotRecord.txt
Type error: error: ProjectionMustBeRecord
 --> <current file>:1:1
  |
1 | True.{ x }
  | ^^^^^^^^^^ ProjectionMustBeRecord
  |
